git-svn-id: http://ironman.agnux.com/repositorios/ErpAgnuxV1@848 ce483f98-b20a-4c78-8f99-c15376fc4320

--- a/erp-quimicos/src/main/webapp/vm/envreenv/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/envreenv/startup.vm
@@ -172,6 +172,7 @@
 															<td width="65">Estatus</td>
 															<td width="90">
 																<select name="select_estatus" style="width:90px;"></select>
+																<input type="hidden" name="estatus_anterior">
 															</td>
 															<td width="40"></td>
 															<td width="75">Programaci&oacute;n</td>
