git-svn-id: http://ironman.agnux.com/repositorios/ErpAgnuxV1@854 ce483f98-b20a-4c78-8f99-c15376fc4320

--- a/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
+++ b/erp-quimicos/src/main/webapp/vm/layouts/menu.vm
@@ -595,14 +595,17 @@
 												<ul>
 													<li class="topline"><a href="../envconf/startup.agnux">Configuraci&oacute;n</a></li>
 													<li class="topline"><a href="../envreenv/startup.agnux">Re-Envasado</a></li>
+													<li class="topline"><a href="../envproceso/startup.agnux">Envasado</a></li>
 												</ul>
 											</li>
+											<!--
 											<li>
 												<a href="#" class="sub">Reportes</a>
 												<ul>
 													<li class="topline"><a href="#">xxxx</a></li>
 												</ul>
 											</li>
+											-->
 										</ul>
 									</li>
 									
