git-svn-id: http://ironman.agnux.com/repositorios/ErpAgnuxV1@861 ce483f98-b20a-4c78-8f99-c15376fc4320

--- a/erp-quimicos/src/main/webapp/vm/invordenentrada/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/invordenentrada/startup.vm
@@ -144,7 +144,7 @@
 														<tr>
 															<td width="10"></td>
 															<td width="70">Folio&nbsp;Entrada</td>
-															<td width="80"><INPUT TYPE="text" name="folio_entrada" style="width:80px;" readOnly="true"></td>
+															<td width="80"><INPUT TYPE="text" name="folio_entrada" style="width:80px; font-weight:bold;" readOnly="true"></td>
 															<td width="40"></td>
 															<td width="95">Tipo&nbsp;de&nbsp;movimiento</td>
 															<td width="250">
