git-svn-id: http://ironman.agnux.com/repositorios/ErpAgnuxV1@863 ce483f98-b20a-4c78-8f99-c15376fc4320

--- a/erp-quimicos/src/main/webapp/vm/invpresentaciones/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/invpresentaciones/startup.vm
@@ -128,7 +128,7 @@
                                                                                         <td >
                                                                                                 <td width="270"><INPUT TYPE="text" name="cantidad" style="width:100px;"></td>
                                                                                         </td>
-                                                                                        <td ></td>
+                                                                                        <td ><div class="interrogacion"><IMG SRC="../../img/help-16x16.png" ALIGN="top" rel="warning_cant"></div></td>
                                                                                         <td ></td>
                                                                                         <td ></td>
                                                                                 </tr>
