--- a/erp-quimicos/src/main/webapp/vm/envproceso/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/envproceso/startup.vm
@@ -157,7 +157,7 @@
 															<td width="60"><input type="text" name="hora" style="width:60px;"></td>
 															<td width="5"><div class="interrogacion"><img src="../../img/help-16x16.png" ALIGN="top" rel="warning_hora"></div></td>
 														</tr>
-                                                                                                                <tr><td colspan="9" height="8"></td></tr>
+                                                                                                                <tr><td colspan="12" height="8"></td></tr>
 														<tr>
                                                                                                                         <td width="70">Folio</td>
                                                                                                                         <td width="60">
@@ -176,7 +176,7 @@
 															<td width="80">&nbsp;<a href="buscar_orden" id="buscar_orden">(Buscar)</a></td>
 															<td width="5"></td>
 														</tr>
-														<tr><td colspan="9" height="8"></td></tr>
+														<tr><td colspan="12" height="8"></td></tr>
 														<tr>
                                                                                                                         <td width="70">Almacen</td>
 															<td width="150" colspan="3">
@@ -190,9 +190,11 @@
 															<td width="60">
                                                                                                                             
                                                                                                                         </td>
+                                                                                                                        <td width="155" colspan="2" align="right"><input type="button" id="generarpdf" value="Generar PDF" style="width:90px; font-weight: bold;"></td>
+															<td width="25"></td>
 															<td width="5"></td>
 														</tr>
-														<tr><td colspan="9" height="8"></td></tr>
+														<tr><td colspan="12" height="8"></td></tr>
 														<tr>
 															<td width="70">Presentaci&oacute;n</td>
 															<td width="80">
@@ -206,9 +208,11 @@
 															<td width="40"></td>
 															<td width="45">Disponible</td>
 															<td width="60"><input type="text" name="disp_pres" style="width:60px; border:1px solid #000;"></td>
+															<td width="155" colspan="2" align="right"><input type="button" id="cancelar_envasado" value="Cancelar" style="width:90px; font-weight: bold;"></td>
+															<td width="25"></td>
 															<td width="5"></td>
 														</tr>
-														<tr><td colspan="9" height="8"></td></tr>
+														<tr><td colspan="12" height="8"></td></tr>
 														<tr>
 															<td width="70">Unidad</td>
 															<td width="80"><input type="text" name="unidad" style="width:80px; border:1px solid #000;"></td>
@@ -220,7 +224,7 @@
 															<td width="60"><input type="text" name="disp_uni" style="width:60px; border:1px solid #000;"></td>
 															<td width="5"></td>
 														</tr>
-                                                                                                                <tr><td colspan="9" height="8"></td></tr>
+                                                                                                                <tr><td colspan="12" height="8"></td></tr>
                                                                                                                 <tr>
 															<td width="70">Equipo</td>
 															<td width="80"><input type="text" name="equipo" style="width:80px; border:1px solid #000;"></td>
