--- a/erp-quimicos/src/main/webapp/vm/envproceso/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/envproceso/startup.vm
@@ -208,7 +208,7 @@
 															<td width="40"></td>
 															<td width="45">Disponible</td>
 															<td width="60"><input type="text" name="disp_pres" style="width:60px; border:1px solid #000;"></td>
-															<td width="155" colspan="2" align="right"><input type="button" id="cancelar_envasado" value="Cancelar" style="width:90px; font-weight: bold;"></td>
+															<td width="155" colspan="2" align="right"><!--<input type="button" id="cancelar_envasado" value="Cancelar" style="width:90px; font-weight: bold;">--></td>
 															<td width="25"></td>
 															<td width="5"></td>
 														</tr>
@@ -234,7 +234,7 @@
 															<td width="40"><div class="interrogacion"><img src="../../img/help-16x16.png" ALIGN="top" rel="warning_operador"></div></td>
 															<td width="45">Merma</td>
 															<td width="60"><input type="text" name="merma" style="width:60px; border:1px solid #000;"></td>
-															<td width="5"></td>
+															<td width="5"><div class="interrogacion"><img src="../../img/help-16x16.png" ALIGN="top" rel="warning_merma"></div></td>
 														</tr>
 													</table>
 												</td>
