--- a/erp-quimicos/src/main/webapp/vm/prefacturas/startup.vm
+++ b/erp-quimicos/src/main/webapp/vm/prefacturas/startup.vm
@@ -53,6 +53,9 @@
 			</tr>
 			<tr>
 				<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
+				<td width="70">Folio&nbsp;Pedido</td>
+				<td width="15"></td>
+				
 				<td width="200">Cliente</td>
 				<td width="15"></td>
 				<td width="100">C&oacute;digo Producto</td>
@@ -73,6 +76,8 @@
 			
 			<tr>
 				<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
+				<td width="70"><INPUT TYPE="text" name="busqueda_folio_pedido" style="width:70px;"></td>
+				<td width="15"></td>
 				<td width="200"><INPUT TYPE="text" name="busqueda_cliente" style="width:200px;"></td>
 				<td width="15"></td>
 				<td width="100"><input type="text" name="busqueda_codigo" style="width:100px;"></td>
@@ -86,10 +91,10 @@
 				</td>
 				<td width="20">&nbsp;</td>
 				<td width="25"><IMG SRC="../../img/catalogo/calendario.png" ALIGN="top"></td>
-				<td width="90"><INPUT TYPE="text" name="busqueda_fecha_inicial" style="width:90px;" readOnly="true"></td>
-				<td width="15"></td>
+				<td width="70"><INPUT TYPE="text" name="busqueda_fecha_inicial" style="width:70px;" readOnly="true"></td>
+				<td width="10"></td>
 				<td width="25"><IMG SRC="../../img/catalogo/calendario.png" ALIGN="top"></td>
-				<td width="90"><INPUT TYPE="text" name="busqueda_fecha_final" style="width:90px;" readOnly="true"></td>
+				<td width="70"><INPUT TYPE="text" name="busqueda_fecha_final" style="width:70px;" readOnly="true"></td>
 				<td width="20">&nbsp;&nbsp;&nbsp;&nbsp;</td>
 				<td><INPUT TYPE="button" id="boton_buscador" class="onmouseOutBuscar"></td>
 				<td width="10">&nbsp;&nbsp;&nbsp;&nbsp;</td>
